--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="loginCard">
             <div class="form-control">
                 <label for="email">Email</label>
-                <input type="text" id="email">
+                <input type="email" id="email">
             </div>
             <div class="form-control">
                 <label for="pwd">Password</label>
